--- a/app/globals.css
+++ b/app/globals.css
@@ -28,3 +28,23 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+
+.show{
+    
+  animation-name: visible;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  }
+@keyframes visible {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+}
