--- a/app/ui/home.module.css
+++ b/app/ui/home.module.css
@@ -34,23 +34,12 @@
      
     }
   }
-  .show{
+  .fadein{
     
-    animation-name: visible;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
-    }
-  @keyframes visible {
-    0% {
-      opacity: 0.5;
-    }
-    50% {
-      opacity: 0.7;
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(30px);
-    }
+    opacity:0;
+    transition:opacity 250ms ease-in;
+
   }
- 
+ .appear{
+  opacity: 1;
+ }
